# associated-token-account

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
interface/: Cargo.toml
interface/src/: instruction.rs
program/: Cargo.toml
program/src/: instruction.rs  processor.rs
program/tests/: create_idempotent.rs  extended_mint.rs  process_create_associated_token_account.rs  program_test.rs  recover_nested.rs  spl_token_create.rs
scripts/rust/: test.mjs
