[package]
name = "spl-associated-token-account-client"
version = "2.0.0"
description = "Solana Program Library Associated Token Account Client"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[dependencies]
solana-instruction = { version = "2.1.0", features = ["std"] }
solana-pubkey = { version = "2.1.0", features = ["curve25519"] }

[dev-dependencies]
solana-program = "2.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
