[package]
name = "spl-associated-token-account"
version = "6.0.0"
description = "Solana Program Library Associated Token Account"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/associated-token-account"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.5.4"
num-derive = "0.4"
num-traits = "0.2"
solana-program = "2.1.0"
spl-associated-token-account-client = { version = "2.0.0", path = "../interface" }
spl-token = { version = "7.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
thiserror = "2.0"

[dev-dependencies]
solana-program-test = "2.1.8"
solana-sdk = "2.1.5"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
